-
Bug
-
Resolution: Done
-
P1: Critical
-
5.2.1
-
None
-
c9a6f55659bc054f835aa682a521425f8fa2bf07
Be able to provide a qmldir from a custom schema, currently it only works if it can be provided via http/https/file or qrc. If the schema is not one of those then it checks if it is a bundle and if it is not that then it fails. Being able to provide it via a custom schema since it is already possible to provide QML in the same manner via a custom network access manager would complete the functionality.
- duplicates
-
QTBUG-36558 Regression: QQmlTypeLoader::qmldirContent doesn't work with non-http/https/bundle scheme URLs
-
- Closed
-
- is required for
-
QDS-33 Make it possible to see the impact of changes to QML files in Qt Creator live in the application on the target device
-
- Closed
-
For Gerrit Dashboard: QTBUG-36773 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
206148,1 | WIP: Fix url interception for qmldir files | dev | qt/qtdeclarative | Status: ABANDONED | -2 | 0 |
206309,13 | Fix URL interception for qmldir files | 5.9 | qt/qtdeclarative | Status: MERGED | -2 | 0 |
214829,1 | Fix URL interception for qmldir files | dev | qt/qtdeclarative | Status: ABANDONED | 0 | 0 |